--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="heading">Meeting Scheduler</h1>
 
-    <a href="http://localhost:8080/calendar/6598b4acd3a33c6d27a1b395" >Book the Monstar Team
+    <a href="/calendar/6598b4acd3a33c6d27a1b395" >Book the Monstar Team
     </a>
     
     <form action="/auth/google">
