--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -48,5 +48,8 @@
         </div>
       <% }) %>
     </div>
+    <pre align="left" >
+      <%= JSON.stringify(cals, null, 2) %> 
+    </pre>
   </div>
 <%- include('./partials/header') %>
