--- a/cal/src/App.css
+++ b/cal/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #dedede;
   min-height: 100px;
   display: flex;
   flex-direction: column;
