--- a/cal/src/App.css
+++ b/cal/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #dedede;
+  background-color: #f0f0f0;
   min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(49, 49, 49);
 }
 
 .App-link {
